@@ -1,14 +1,15 @@
 # Interface to the Redis-backed cache store used by the Repository model
 class RepositoryCache
-  attr_reader :namespace, :backend
+  attr_reader :namespace, :backend, :project_id
 
-  def initialize(namespace, backend = Rails.cache)
+  def initialize(namespace, project_id, backend = Rails.cache)
     @namespace = namespace
     @backend = backend
+    @project_id = project_id
   end
 
   def cache_key(type)
-    "#{type}:#{namespace}"
+    "#{type}:#{namespace}:#{project_id}"
   end
 
   def expire(key)
