@@ -4,6 +4,7 @@ v 8.10.2 (unreleased)
   - User can now search branches by name. !5144
   - Add branch or tag icon to ref in builds page. !5434
   - Fix backup restore. !5459
+  - Use project ID in repository cache to prevent stale data from persisting across projects. !5460
   - Don't show comment button in gutter of diffs on MR discussion tab
 
 v 8.10.1
